# wagtail-editable-help

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.py  testmanage.py  tox.ini
.circleci/: config.yml  trigger-nightly-build.sh
.github/workflows/: test.yml
wagtail_editable_help/: __init__.py  apps.py  middleware.py  models.py  wagtail_hooks.py
wagtail_editable_help/migrations/: 0001_initial.py
wagtail_editable_help/static/wagtail_editable_help/: wagtail_editable_help.css
wagtail_editable_help/test/: __init__.py  apps.py  models.py  settings.py  urls.py
wagtail_editable_help/test/migrations/: 0001_initial.py  0002_homepage_sidebar.py
wagtail_editable_help/test/tests/: test_admin.py
