[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wagtail-editable-help"
authors = [{name = "Matt Westcott", email = "matthew@torchbox.com"}]
description = "Make help text editable in the Wagtail admin"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 7"
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "Django>=5.2",
    "wagtail>=7.0",
    "telepath>=0.3"
]

[project.optional-dependencies]
testing = [
    "dj-database-url==0.5.0",
    "freezegun==0.3.15"
]

[project.urls]
Source = "https://github.com/wagtail/wagtail-editable-help"
Documentation = "https://github.com/wagtail/wagtail-editable-help#readme"

[tool.flit.module]
name = "wagtail_editable_help"

[tool.flit.sdist]
exclude = [
    "wagtail_editable_help/test",
    "testmanage.py",
]
